--- a/trans_wiki/src/main/resources/application.yml
+++ b/trans_wiki/src/main/resources/application.yml
@@ -8,6 +8,12 @@ spring:
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
+  boot:
+    admin:
+      client:
+        url: http://localhost:8081
+        instance:
+          service-base-url: http://localhost:8080
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
